[workspace]
members = [
    "nomos-core/chain-defs",
    "nomos-core/cl",
    "nomos-da/full-replication",
    "nomos-da/kzgrs",
    "nomos-da/kzgrs-backend",
    "nomos-da/storage",
    "nomos-da/network/core",
    "nomos-da/network/messages",
    "nomos-da/network/subnetworks-assignations",
    "nomos-libp2p",
    "nomos-services/api",
    "nomos-services/tracing",
    "nomos-services/network",
    "nomos-services/storage",
    "nomos-services/cryptarchia-consensus",
    "nomos-services/mempool",
    "nomos-services/system-sig",
    "nomos-services/data-availability/indexer",
    "nomos-services/data-availability/network",
    "nomos-services/data-availability/sampling",
    "nomos-services/data-availability/verifier",
    "nomos-services/data-availability/dispersal",
    "nomos-services/data-availability/tests",
    "nomos-services/blend",
    "nomos-services/utils",
    "nomos-blend/core",
    "nomos-blend/message",
    "nomos-blend/network",
    "nomos-tracing",
    "nomos-cli",
    "nomos-utils",
    "nodes/nomos-node",
    "nodes/nomos-executor",
    "consensus/carnot-engine",
    "consensus/cryptarchia-engine",
    "ledger/nomos-ledger",
    "nomos-core/cl",
    "testnet/cfgsync",
    "tests",
    "clients/executor-http-client",
    "nomos-services/key-management-system",
    "nomos-bundler",
]
exclude = ["proof_of_leadership/risc0/risc0_proofs", "nomos-core/risc0_proofs"]
resolver = "2"

[workspace.package]
license = "MIT or Apache-2.0"

[workspace.dependencies]
overwatch-rs = { git = "https://github.com/logos-co/Overwatch", rev = "742fa88" }
overwatch-derive = { git = "https://github.com/logos-co/Overwatch", rev = "742fa88" }
