[package]
name = "consensus-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
bls-signatures = "0.14"
integer-encoding = "3"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"

[features]
default = []
