[package]
name = "consensus-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
blake2 = "0.10"
bls-signatures = "0.14"
digest = "0.10"
derive_more = "0.99"
integer-encoding = "3"
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
fraction = { version = "0.13" }

[features]
default = []
serde = ["dep:serde"]
simulation = []

[dev-dependencies]
proptest = "1.2.0"
proptest-state-machine = "0.1.0"
