[package]
name = "mixnet"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
nomos-utils = { path = "../nomos-utils" }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["sync"] }
serde = { version = "1.0.197", features = ["derive"] }
sphinx-packet = "0.1.0"
nym-sphinx-addressing = { package = "nym-sphinx-addressing", git = "https://github.com/nymtech/nym", tag = "v1.1.22" }
tracing = "0.1.40"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["test-util"] }
