[package]
name = "mixnet"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["sync"] }
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["test-util"] }
