[package]
name = "bundler"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
tauri-bundler = { workspace = true }
tauri-utils = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[[bin]]
name = "bundle-nomos-node"
path = "nomos-node/bundle.rs"
