[package]
edition = "2021"
license = { workspace = true }
name    = "bundler"
version = "0.1.0"

[dependencies]
clap          = { version = "4.5.27", features = ["derive"] }
env_logger    = "0.11.6"
log           = "0.4.22"
serde_json    = "1.0.135"
tauri-bundler = "2.2.1"
tauri-utils   = "2.1.1"

[[bin]]
name = "bundle-nomos-node"
path = "nomos-node/bundle.rs"
