[package]
name = "nomos-cli"
version = "0.1.0"
edition = "2021"
description = "Cli app to interact with Nomos nodes and perform various tasks"
default-run = "nomos-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
executor-http-client = { path = "../clients/executor-http-client" }
hex = "0.4.3"
kzgrs-backend = { path = "../nomos-da/kzgrs-backend" }
nomos-core = { path = "../nomos-core/chain-defs" }
nomos-node = { path = "../nodes/nomos-node" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
