[package]
name = "nomos-cli"
description = "Cli app to interact with Nomos nodes and perform various tasks"
default-run = "nomos-cli"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
executor-http-client = { workspace = true }
hex = { workspace = true }
kzgrs-backend = { workspace = true }
nomos-core = { workspace = true }
nomos-node = { workspace = true }
nomos-tracing = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
