[package]
default-run = "nomos-cli"
description = "Cli app to interact with Nomos nodes and perform various tasks"
edition     = "2021"
license     = { workspace = true }
name        = "nomos-cli"
version     = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap                 = { version = "4", features = ["derive"] }
executor-http-client = { workspace = true }
hex                  = "0.4.3"
kzgrs-backend        = { workspace = true }
nomos-core           = { workspace = true }
nomos-node           = { workspace = true }
nomos-tracing        = { workspace = true }
reqwest              = { version = "0.12", features = ["json"] }
serde                = { version = "1.0", features = ["derive"] }
serde_json           = "1"
tokio                = { version = "1", features = ["sync"] }
tracing              = "0.1"
tracing-subscriber   = "0.3"
