[package]
name = "nomos-core"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Sanchez Quiros <danielsq@status.im>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1" }
blake2 = { version = "0.10" }
bytes = "1.3"
consensus-engine = { path = "../consensus-engine", features = ["serde"] }
futures = "0.3"
nomos-network = { path = "../nomos-services/network", optional = true }
raptorq = { version = "1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
indexmap = { version = "1.9", features = ["serde"] }
serde_json = { version = "1", optional = true }
wire = { path = "../wire" }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.23", features = ["macros", "rt"] }


[features]
default = []
raptor = ["raptorq"]
mock = ["nomos-network/mock", "serde_json"]
waku = ["nomos-network/waku", "serde_json"]
