[package]
name = "nomos-core"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniel Sanchez Quiros <danielsq@status.im>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1" }
blake2 = { version = "0.10" }
bytes = "1.3"
consensus-engine = { path = "../consensus-engine", features = ["serde"]}
futures = "0.3"
raptorq = { version = "1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
bincode = "1.3"
once_cell = "1.0"
indexmap = { version = "1.9", features = ["serde"] }

# The below three crates, only used for debug-happy feature, need to be removed in the future.
parking_lot = { version = "0.12", optional = true }
tempfile = { version = "3.8", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.23", features = ["macros", "rt"] }


[features]
default = []
raptor = ["raptorq"]
mock = []

# This feature needs to be removed when we have fixed the nomos node bug
debug-happy = ["parking_lot", "tempfile", "serde_json"]