[package]
name = "nomos-core"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniel Sanchez Quiros <danielsq@status.im>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1" }
blake2 = { version = "0.10" }
bytes = "1.3"
carnot-engine = { path = "../consensus/carnot-engine", features = ["serde"]}
cryptarchia-engine = { path = "../consensus/cryptarchia-engine", features = ["serde"]}
cryptarchia-ledger = { path = "../ledger/cryptarchia-ledger", features = ["serde", "risc0_proof"]}
cl =  { path = "../cl/cl" }
futures = "0.3"
raptorq = { version = "1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
bincode = "1.3"
once_cell = "1.0"
indexmap = { version = "1.9", features = ["serde"] }
const-hex = "1"

[dev-dependencies]
rand = "0.8"


[features]
default = []
raptor = ["raptorq"]
mock = []
