[package]
name = "nomos-http-api"
version = "0.1.0"
edition = "2021"

[features]
axum = ["dep:axum", "dep:hyper", "utoipa-swagger-ui/axum"]

[dependencies]
async-trait = "0.1"
overwatch-rs = { git = "https://github.com/logos-co/Overwatch", rev = "6e6678b" }
overwatch-derive = { git = "https://github.com/logos-co/Overwatch", rev = "6e6678b" }
tracing = "0.1"
nomos-core = { path = "../nomos-core" }
nomos-da = { path = "../nomos-services/data-availability" }
nomos-mempool = { path = "../nomos-services/mempool", features = ["mock", "libp2p", "openapi"] }
full-replication = { path = "../nomos-da/full-replication" }
tokio = { version = "1.32", features = ["full"] }
thiserror = "1"
utoipa = "4.0"
utoipa-swagger-ui = { version = "4.0" }


# axum related dependencies
axum = { version = "0.6", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

