[package]
name = "nomos-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
overwatch = { git = "https://github.com/logos-co/Overwatch", branch = "main" }
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"