[package]
name = "nomos-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.2"
futures = "0.3"
overwatch = { git = "https://github.com/logos-co/Overwatch", branch = "main" }
multiaddr = "0.15"
serde = "1.0"
sled = { version = "0.34", optional = true }
surrealdb = { version = "1.0.0-alpha", optional = true }
tokio = { version = "1", features = ["sync"] }
thiserror = "1.0"
tracing = "0.1"
waku = { git = "https://github.com/waku-org/waku-rust-bindings" }

[dev-dependencies]
tempfile = "3.3"
tokio = { version = "1", features = ["sync", "macros", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["sync", "macros", "rt"]}

[features]
default = []
mock = []
sled-backend = ["sled"]
# patch.exe must be in the path for building in windows mscv, you can find it in Git distributions usually under `Gid/usr/bin`
# check https://github.com/DelSkayn/rquickjs/issues/88 for more information.
surreal = ["surrealdb"]