[package]
name = "nomos-services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.2"
overwatch = { git = "https://github.com/logos-co/Overwatch", branch = "main" }
serde = "1.0"
tokio = { version = "1", features = ["sync"] }
thiserror = "1.0"
tracing = "0.1"
waku = { git = "https://github.com/waku-org/waku-rust-bindings" }
multiaddr = "0.15"


[features]
default = []
mock = []
