[package]
name = "nomos-tracing"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = [
    "grpc-tonic",
    "http-proto",
    "opentelemetry-http",
] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-http = { workspace = true, features = ["reqwest"] }
opentelemetry-semantic-conventions = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-gelf = { workspace = true }
tracing-loki = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "json",
    "registry",
] }
url = { workspace = true, features = ["serde"] }
