[package]
name = "nomos-utils"
version = "0.1.0"
edition = "2021"
license = { workspace = true }

[features]
serde = ["dep:serde"]

[dependencies]
const-hex = "1"
overwatch-rs = { git = "https://github.com/logos-co/Overwatch", rev = "f5f7ea0" }
serde = { version = "1.0", optional = true }
rand = "0.8"
rand_chacha = "0.3"
tracing = "0.1"
