[package]
edition = "2021"
license = { workspace = true }
name = "nomos-utils"
version = "0.1.0"

[dependencies]
const-hex = "1"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0" }
time = { version = "0.3", optional = true, features = ["serde", "serde-human-readable", "parsing"] }
humantime = { version = "2.1", optional = true }

[features]
serde = ["dep:serde"]
time = ["dep:time", "dep:humantime"]
