[package]
edition = "2021"
license = { workspace = true }
name    = "nomos-utils"
version = "0.1.0"

[dependencies]
const-hex   = "1"
humantime   = { version = "2.1", optional = true }
rand        = "0.8"
rand_chacha = "0.3"
serde       = { version = "1.0", optional = true, features = ["derive"] }
serde_with  = { workspace = true, optional = true }
time        = { version = "0.3", optional = true, features = ["parsing", "serde"] }

[features]
serde = ["dep:serde"]
time  = ["dep:humantime", "dep:serde_with", "dep:time", "serde"]

[dev-dependencies]
serde_json = "1.0"
